package NYT.NOrm.NExample.NClient.NProto.NDataModel;

import "yt_proto/yt/orm/client/proto/object.proto";

option java_package = "ru.yandex.yt.yt.orm.example.client.proto.data_model";
option go_package = "go.ytsaurus.tech/yt/yt/orm/example/client/proto/data_model";

////////////////////////////////////////////////////////////////////////////////

option (NYT.NOrm.NClient.NProto.object_type) = {
    camel_case_name: "Executor"
    snake_case_name: "executor"
    primary_key: ["id"]
    type_value: 103
    watch_logs: [
        { snake_case_name: "watch_log" },
        {
            snake_case_name: "khalai_rank_watch_log"
            selectors: ["/spec/rank"]
            filter: "[/labels/tribe] = 'Khalai'"
        },
        {
            snake_case_name: "selector_watch_log"
            selectors: ["/labels/tribe"]
        }
    ]
};

////////////////////////////////////////////////////////////////////////////////

message TExecutorMetaMixin
{
    optional int64 id = 1 [(NYT.NOrm.NClient.NProto.generation_policy) = GP_RANDOM];
}

message TExecutorSpecMixin
{
    optional string first_name = 1;
    optional string second_name = 2;
    optional int64 rank = 3;
}

////////////////////////////////////////////////////////////////////////////////
